@@ -61,6 +61,8 @@ ikiwiki (2.41) UNRELEASED; urgency=low
   * Changed to a binary index file, written using Storable, for speed.
   * external: Work around XML RPC's lack of support for null by passing
     a special sentinal value.
+  * inline: Allow the "feedshow" parameter to take values greater than the
+    value for "show".
 
  -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100
 
